<resources>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="sign_in">Sing in</string>
    <string name="sing_up">Sing up</string>
    <string name="beers">Beers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>